--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,8 @@
 </head>
 <body>
     <h1>Adivinhe o número!</h1>
+    <p id="mensagem">Olá!</p>
     <input type="text" name="entrada" id="entrada">
-    <button type=""></button>
+    <button type="">Próximo!</button>
 </body>
 </html>
