--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -8,10 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adivinhe o número!</title>
 </head>
+
 <body>
-    <h1>Adivinhe o número!</h1>
-    <p id="mensagem">Olá!</p>
-    <input type="text" name="entrada" id="entrada">
-    <button type="">Próximo!</button>
+    <div class="box">
+        <h1>Adivinhe o número!</h1>
+        <p id="mensagem">Olá!</p>
+        <input type="text" name="entrada" id="entrada" style="display:block">
+        <button>Próximo!</button>
+    </div>
 </body>
+
 </html>
