--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="box">
         <h1>Adivinhe o número!</h1>
         <p id="mensagem">Olá!</p>
-        <input type="text" name="entrada" id="entrada" style="display:block">
+        <input type="number" name="entrada" id="entrada">
         <button>Próximo!</button>
     </div>
 </body>
